updated login, register and dashboard UI

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,8 +8,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>MERN Auth App</title>
+    <title>Hammoq</title>
   </head>
   <body>
     <noscript>
